--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "pages":[
-    "pages/index/index",
-    "pages/logs/logs"
-  ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "pages": ["pages/home/index", "pages/goods/index", "pages/user/index", "pages/message/index"],
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
+  },
+  "resolveAlias": {
+    "~/*": "/*"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
