feat:增加@vant/weappUI库

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-lint": "eslint --ext .ts,.js ."
   },
   "dependencies": {
+    "@vant/weapp": "^1.10.4",
     "dayjs": "^1.11.5"
   },
   "devDependencies": {
