--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "main": "",
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development run-s switch-env miniprogram-ci",
-    "build:dev02": "cross-env NODE_ENV=development02 node miniprogram-ci.js",
+    "build:dev02": "cross-env NODE_ENV=development02 run-s switch-env miniprogram-ci",
     "build:test": "cross-env NODE_ENV=test run-s switch-env miniprogram-ci",
-    "build:test02": "cross-env NODE_ENV=test02 node miniprogram-ci.js",
-    "build:pre": "cross-env NODE_ENV=preview node miniprogram-ci.js",
-    "build:prod": "cross-env NODE_ENV=production node miniprogram-ci.js",
+    "build:test02": "cross-env NODE_ENV=test02 run-s switch-env miniprogram-ci",
+    "build:pre": "cross-env NODE_ENV=preview run-s switch-env miniprogram-ci",
+    "build:prod": "cross-env NODE_ENV=production run-s switch-env miniprogram-ci",
     "prepare": "husky install && npx husky add .husky/pre-commit 'npx lint-staged'",
     "prettier": "prettier --write",
     "prettier-lint": "prettier --write .",
