--- a/project.config.json
+++ b/project.config.json
@@ -44,7 +44,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.19.4",
-	"appid": "wx2f3fed2106f72ceb",
+	"appid": "wx0d6d764af9843ae7",
 	"projectname": "miniprogram-92",
 	"condition": {},
 	"editorSetting": {
