--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,7 +3,7 @@
 	"projectname": "miniprogram-template",
 	"setting": {
 		"compileHotReLoad": false,
-		"urlCheck": false
+		"urlCheck": true
 	},
 	"libVersion": "2.25.4",
 	"condition": {
@@ -12,6 +12,13 @@
 				{
 					"name": "",
 					"pathName": "pages/home/index",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "",
+					"pathName": "packageA/pages/broken-network/index",
 					"query": "",
 					"launchMode": "default",
 					"scene": null
