--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
         "pages/iconfot/index",
         "pages/image/index",
         "pages/nav-bar/index",
-        "pages/rich-text/index"
+        "pages/rich-text/index",
+        "pages/readme/index"
       ]
     }
   ]
