feat:新增image组件描述页面，相关UI、逻辑调整

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -36,6 +36,13 @@
 					"query": "",
 					"launchMode": "default",
 					"scene": null
+				},
+				{
+					"name": "",
+					"pathName": "packageA/pages/image/index",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
 				}
 			]
 		}
