feat:增加导航栏组件说明页面

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -43,6 +43,13 @@
 					"query": "",
 					"launchMode": "default",
 					"scene": null
+				},
+				{
+					"name": "",
+					"pathName": "packageA/pages/nav-bar/index",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
 				}
 			]
 		}
