feat:新增视频组件

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -2,7 +2,7 @@
 	"description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
 	"projectname": "miniprogram-template",
 	"setting": {
-		"compileHotReLoad": false,
+		"compileHotReLoad": true,
 		"urlCheck": true
 	},
 	"libVersion": "2.25.4",
@@ -47,6 +47,13 @@
 				{
 					"name": "",
 					"pathName": "packageA/pages/nav-bar/index",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
+				},
+				{
+					"name": "",
+					"pathName": "packageA/pages/video/index",
 					"query": "",
 					"launchMode": "default",
 					"scene": null
