--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
     "custom-image": "/components/custom-image/index",
     "custom-iconfont": "/components/custom-iconfont/index",
     "custom-rich-text": "/components/custom-rich-text/index",
-    "custom-loading": "/components/custom-loading/index"
+    "custom-loading": "/components/custom-loading/index",
+    "custom-video": "/components/custom-video/index"
   },
   "sitemapLocation": "sitemap.json",
   "pages": ["pages/home/index"],
@@ -35,7 +36,8 @@
         "pages/image/index",
         "pages/nav-bar/index",
         "pages/rich-text/index",
-        "pages/readme/index"
+        "pages/readme/index",
+        "pages/video/index"
       ]
     }
   ]
