--- a/package.json
+++ b/package.json
@@ -33,17 +33,13 @@
     "dayjs": "^1.11.5"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "eslint": "^8.27.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.23.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "miniprogram-ci": "^1.8.35",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "cross-env": "^7.0.3",
+    "npm-run-all": "^4.1.5"
   },
   "husky": {
     "hooks": {
