feat:新增视频组件，图片组件样式调整，wxs工具类调整

--- a/app.json
+++ b/app.json
@@ -16,12 +16,14 @@
     "van-button": "@vant/weapp/button/index",
     "van-checkbox": "@vant/weapp/checkbox/index",
     "van-field": "@vant/weapp/field/index",
+    "van-loading": "@vant/weapp/loading/index",
     "custom-nav-bar": "/components/custom-nav-bar/index",
     "custom-broken-network": "/components/custom-broken-network/index",
     "custom-image": "/components/custom-image/index",
     "custom-iconfont": "/components/custom-iconfont/index",
     "custom-rich-text": "/components/custom-rich-text/index",
-    "custom-loading": "/components/custom-loading/index"
+    "custom-loading": "/components/custom-loading/index",
+    "custom-video": "/components/custom-video/index"
   },
   "sitemapLocation": "sitemap.json",
   "pages": ["pages/home/index"],
@@ -35,7 +37,8 @@
         "pages/image/index",
         "pages/nav-bar/index",
         "pages/rich-text/index",
-        "pages/readme/index"
+        "pages/readme/index",
+        "pages/video/index"
       ]
     }
   ]
