feat:新增组件分享内容

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -57,6 +57,13 @@
 					"query": "",
 					"launchMode": "default",
 					"scene": null
+				},
+				{
+					"name": "",
+					"pathName": "packageA/pages/rich-text/index",
+					"query": "",
+					"launchMode": "default",
+					"scene": null
 				}
 			]
 		}
