feat: 增加轮播图引导动画示例

--- a/app.json
+++ b/app.json
@@ -44,6 +44,11 @@
         "pages/video/index",
         "pages/virtuali-list/index"
       ]
+    },
+    {
+      "root": "packageB",
+      "name": "packageB",
+      "pages": ["pages/watermark/index", "pages/swiper-guide-animation/index"]
     }
   ]
 }
