--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,8 @@
 		},
 		"useCompilerPlugins": [
 			"sass"
-		]
+		],
+		"condition": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.19.4",
