--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "build:dev": "cross-env NODE_ENV=development run-s switch-env miniprogram-ci",
     "build:prod": "cross-env NODE_ENV=production run-s switch-env miniprogram-ci",
     "build:prod1": "cross-env NODE_ENV=production run-s switch-env",
-    "lint": "eslint . --fix",
-    "format": "prettier . --write",
+    "lint": "eslint --fix",
+    "lint-all": "eslint . --fix",
+    "format": "prettier --write",
+    "format-all": "prettier . --write",
     "prepare": "husky"
   },
   "keywords": [],
