feat:  新增说明文件、忽略自带的配置文件格式化

--- a/project.config.json
+++ b/project.config.json
@@ -3,7 +3,10 @@
   "miniprogramRoot": "miniprogram/",
   "compileType": "miniprogram",
   "setting": {
-    "useCompilerPlugins": ["typescript", "sass"],
+    "useCompilerPlugins": [
+      "typescript",
+      "sass"
+    ],
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
