--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,8 @@
         "packageJsonPath": "./package.json",
         "miniprogramNpmDistDir": "./miniprogram/"
       }
-    ]
+    ],
+    "swc": false
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
