--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,11 +1,11 @@
 {
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "projectname": "miniprogram-ts",
+  "projectname": "miniprogram-template",
   "setting": {
-    "compileHotReLoad": false,
+    "compileHotReLoad": true,
     "autoAudits": false,
     "lazyloadPlaceholderEnable": true,
     "skylineRenderEnable": false
   },
-  "libVersion": "development"
+  "libVersion": "3.7.7"
 }
